--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h1 class="my-text-red">I tuoi dati inseriti sono :</h1>
             <h2>Il tuo nome è : <span id="name"></span></h2>
             <h2>Il tuo cognome è : <span id="last-name"></span></h2>
+            <h2 id="user-year">I tuoi anni sono </h2>
             <h2>Sei nato/a nell'anno : <span id="age"></span></h2>
             <h2>I km che hai inserito sono : <span id="kms"></span></h2>
             <h2><span id="discount"></span></h2>
