--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <h1 class="my-text-red">I tuoi dati inseriti sono :</h1>
             <h2>Il tuo nome è : <span id="name"></span></h2>
             <h2>Il tuo cognome è : <span id="last-name"></span></h2>
-            <h2 id="age">I tuoi anni sono </h2>
+            <h2 id="age">I tuoi anni sono : </h2>
             <h2>Sei nato/a nell'anno : <span id="user-year"></span></h2>
             <h2>I km che hai inserito sono : <span id="kms"></span></h2>
-            <h2><span id="discount"></span></h2>
+            <h2 class="my-text-red"><span id="discount"></span></h2>
             <h2 id="price">Il prezzo da pagare è :</h2>
         </section>
 
