--- a/index.html
+++ b/index.html
@@ -25,10 +25,45 @@
 <body>
 
     <!-- header -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container justify-content-center ">
+                <a class="navbar-brand" href="#"><img src="img/logo-trenitalia.svg" alt="" class="img-fluid"
+                        id="fr-logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse text-uppercase flex-grow-0" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Frecce</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">IC e alri treni</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Trasporto regionale</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Offerte e servizi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">cartafreccia </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"> altri servizi</a>
+                        </li>
+                    </ul>
 
+                </div>
+            </div>
+        </nav>
+    </header>
     <!-- main -->
     <main>
-        <section class="mt-5 p-5 bg-black text-white">
+        <section class="p-5 bg-black text-white">
             <h1 class="my-text-red">I tuoi dati inseriti sono :</h1>
             <h2>Il tuo nome è : <span id="name"></span></h2>
             <h2>Il tuo cognome è : <span id="last-name"></span></h2>
@@ -42,7 +77,7 @@
     </main>
     <!-- footer -->
     <footer></footer>
-    <script src="js/script.js"></script>
+    <!--   <script src="js/script.js"></script> -->
 </body>
 
 </html>
