--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <!-- header -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg my-bg-grey my-text-greenyellow">
             <div class="container justify-content-center ">
-                <a class="navbar-brand" href="#"><img src="img/logo-trenitalia.svg" alt="" class="img-fluid"
+                <a class="navbar-brand " href="#"><img src="img/logo-trenitalia.svg" alt="" class="img-fluid"
                         id="fr-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -38,22 +38,27 @@
                 <div class="collapse navbar-collapse text-uppercase flex-grow-0" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Frecce</a>
+                            <a class="nav-link active my-text-greenyellow" aria-current="page" href="#">Frecce</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">IC e alri treni</a>
+                            <a class="nav-link active my-text-greenyellow" aria-current="page" href="#">IC e alri
+                                treni</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Trasporto regionale</a>
+                            <a class="nav-link active my-text-greenyellow" aria-current="page" href="#">Trasporto
+                                regionale</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Offerte e servizi</a>
+                            <a class="nav-link active my-text-greenyellow" aria-current="page" href="#">Offerte e
+                                servizi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">cartafreccia </a>
+                            <a class="nav-link active my-text-greenyellow" aria-current="page" href="#">cartafreccia
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"> altri servizi</a>
+                            <a class="nav-link active my-text-greenyellow" aria-current="page" href="#"> altri
+                                servizi</a>
                         </li>
                     </ul>
 
@@ -63,7 +68,7 @@
     </header>
     <!-- main -->
     <main class="my-bg-grey">
-        <h1 class="my-text-red text-center">I tuoi dati inseriti sono :</h1>
+        <h1 class="my-text-greenyellow text-center">I tuoi dati inseriti sono :</h1>
         <section class="container-fluid p-5 ">
             <div class="row d-flex justify-content-center g-5 my-color-blu">
                 <div class="col-12 col-md-6 rounded-pill my-border-blu">
@@ -82,7 +87,7 @@
                     <h2>I km che hai inserito sono : <span class="my-color-grey" id="kms"></span></h2>
                 </div>
                 <div class="col-12 d-flex justify-content-center  rounded-pill my-border-blu">
-                    <h1 class="my-text-red"><span id="discount"></span></h1>
+                    <h1 class="my-text-greenyellow"><span id="discount"></span></h1>
                 </div>
                 <div class="col-12  rounded-pill my-border-blu">
                     <h2 class="text-white text-center" id="price">Il prezzo da pagare è :</h2>
