--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="shortcut icon" href="img/trenitalia-squarelogo-1567666952009.png" type="image/x-icon" />
     <title>Trenitalia</title>
 </head>
 
@@ -30,7 +30,7 @@
             <div class="container justify-content-center ">
                 <a class="navbar-brand " href="#"><img src="img/logo-trenitalia.svg" alt="" class="img-fluid"
                         id="fr-logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
