--- a/index.html
+++ b/index.html
@@ -70,34 +70,34 @@
     <main class="my-bg-grey">
         <h1 class="my-text-greenyellow text-center">I tuoi dati inseriti sono :</h1>
         <section class="container-fluid p-5 ">
-            <div class="row d-flex justify-content-center g-5 my-color-blu">
-                <div class="col-12 col-md-6 rounded-pill my-border-blu">
+            <div class="row d-flex justify-content-evenly g-5 my-color-blu text-center">
+                <div class="col-12 col-md-5  rounded-pill my-border-blu">
                     <h2 class="">Il tuo nome è : <span class="my-color-grey" id="name"></span></h2>
                 </div>
-                <div class="col-12 col-md-6 rounded-pill my-border-blu">
+                <div class="col-12 col-md-5 rounded-pill my-border-blu">
                     <h2>Il tuo cognome è : <span class="my-color-grey" id="last-name"></span></h2>
                 </div>
-                <div class="col-12 col-md-6   rounded-pill my-border-blu">
+                <div class="col-12 col-md-5   rounded-pill my-border-blu">
                     <h2 class="" id="age">I tuoi anni sono : </h2>
                 </div>
-                <div class="col-12 col-md-6   rounded-pill my-border-blu">
+                <div class="col-12 col-md-5   rounded-pill my-border-blu">
                     <h2>Sei nato/a nell'anno : <span class="my-color-grey" id="user-year"></span></h2>
                 </div>
-                <div class="col-12   rounded-pill my-border-blu">
+                <div class="col-12 col-md-6    rounded-pill my-border-blu">
                     <h2>I km che hai inserito sono : <span class="my-color-grey" id="kms"></span></h2>
                 </div>
-                <div class="col-12 d-flex justify-content-center  rounded-pill my-border-blu">
+                <div class="col-12 col-md-10 d-flex justify-content-center  rounded-pill my-border-blu">
                     <h1 class="my-text-greenyellow"><span id="discount"></span></h1>
                 </div>
-                <div class="col-12  rounded-pill my-border-blu">
-                    <h2 class="text-white text-center" id="price">Il prezzo da pagare è :</h2>
+                <div class=" col-12 col-md-6  rounded-pill my-border-blu">
+                    <h2 class="text-white " id="price">Il prezzo da pagare è :</h2>
                 </div>
             </div>
         </section>
 
     </main>
     <!-- footer -->
-    <footer></footer>
+
     <script src="js/script.js"></script>
 </body>
 
